# house-price-prediction

./: .flake8  .gitignore  DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  train_models.py
.github/workflows/: ci-simple.yml  ci.yml  model-training.yml
models/: training_report.json
src/api/: main.py
src/models/: ensemble_models.py  evaluation.py
tests/: test_api.py  test_models.py  test_preprocessor.py
